test/chainsaw/authpolicy/only_ignore_auth_rules/application-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: skiperator
    app.kubernetes.io/name: application
    application.skiperator.no/app: application
    application.skiperator.no/app-name: application
    skiperator.kartverket.no/controller: application
  name: application
spec:
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: application
    security.istio.io/tlsMode: istio
status:
  phase: Running
